# Tensor-Descriptor

./: .gitignore  CMakeLists.txt  README.md
src/: arch_main.cc  arch_tensor.hh  microarch_main.cc  microarch_tensor.hh
